# Hierarchical-Adaptive-Memory

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
configs/: archbench_finetune.yaml  archbench_smoke.yaml  archbench_toy.yaml  finetune_smoke.yaml  finetune_smollm.yaml  kvbench_smoke.yaml  kvbench_smollm.yaml  kvbench_smollm_n50.yaml  locomo.yaml  longmemeval.yaml  poc_real_smollm.yaml  publication_7b.yaml  smoke.yaml  synthetic.yaml
docs/: ARCHBENCH_PROTOCOL.md  ARCHITECTURE.md  BASELINE_CROSSWALK.csv  BASELINE_CROSSWALK.json  EXPERIMENT_PROTOCOL.md  FINETUNING_PROTOCOL.md  KVBENCH_PROTOCOL.md  METHODOLOGY_APPENDIX.md  METRICS_SCHEMA.md  REPRODUCIBILITY.md  STAGE_TAXONOMY.md
src/ham/: __init__.py  cli.py  conditions.py  config.py  embeddings.py  instrumentation.py  manifest.py  metrics.py  report.py  runner.py  stats.py
src/ham/archbench/: __init__.py  cost.py  memory.py  mock.py  model.py  protocol.py  report.py  runner.py  task.py  trainer.py
src/ham/architecture/: __init__.py  layer.py  toy.py
src/ham/backends/: __init__.py  base.py  hf.py  llamaserver.py  mock.py
src/ham/compression/: __init__.py  serialize.py  text_codec.py  vector_quant.py
src/ham/datasets/: __init__.py  base.py  locomo.py  longmemeval.py  synthetic.py
src/ham/kvbench/: __init__.py  kv_compress.py  mock.py  protocol.py  report.py  runner.py  task.py  trainer.py
src/ham/memory/: __init__.py  consolidation.py  ham.py  importance.py  retrieval.py  store.py
src/ham/training/: __init__.py  corpus.py  eval.py  hf.py  mock.py  protocol.py  report.py  runner.py  target.py  zeroshot.py
tests/: test_archbench_cost.py  test_archbench_finetune_torch.py  test_archbench_memory.py  test_archbench_runner.py  test_archbench_task.py  test_architecture.py  test_baselines_report.py  test_consolidation.py  test_fair_controls.py  test_finetune_report.py  test_finetune_runner.py  test_finetune_target.py  test_importance_tiering.py  test_kvbench_kv_compress.py  test_kvbench_runner.py  test_memory_eviction.py  test_metrics_stats.py  test_quantization.py  test_retrieval.py  test_retrieval_metrics.py  test_serialize.py  test_smoke_pipeline.py  test_stage_metadata.py
